--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,21 +1,16 @@
-{% set name = "tblib" %}
-{% set version = "1.3.2" %}
-{% set compress_type = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash = "436e4200e63d92316551179dc540906652878df4ff39b43db30fcf6400444fe7" %}
+{% set version = "1.4.0" %}
 
 package:
-  name: {{ name|lower }}
+  name: tblib
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ compress_type }}
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ compress_type }}
-  {{ hash_type }}: {{ hash }}
+  url: https://pypi.org/packages/source/t/tblib/tblib-{{ version }}.tar.gz
+  sha256: bd1ad564564a158ff62c290687f3db446038f9ac11a0bf6892712e3601af3bcd
 
 build:
+  number: 0
   noarch: python
-  number: 1
   script: python -m pip install --no-deps --ignore-installed .
 
 
